--- a/src/less/icon.less
+++ b/src/less/icon.less
@@ -41,6 +41,30 @@
         background-size: 100%;
         background-image: url("../images/tab_4.png")
     }
+    &.kk-sidebar-1 {
+        background-size: 100%;
+        background-image: url("../images/sidebar_1.png")
+    }
+    &.kk-sidebar-2 {
+        background-size: 100%;
+        background-image: url("../images/sidebar_2.png")
+    }
+    &.kk-sidebar-3 {
+        background-size: 100%;
+        background-image: url("../images/sidebar_3.png")
+    }
+    &.kk-sidebar-4 {
+        background-size: 100%;
+        background-image: url("../images/sidebar_4.png")
+    }
+    &.kk-sidebar-5 {
+        background-size: 100%;
+        background-image: url("../images/sidebar_5.png")
+    }
+    &.kk-sidebar-6 {
+        background-size: 100%;
+        background-image: url("../images/sidebar_6.png")
+    }
     &.kk-edit {
         background-size: 100%;
         background-image: url("../images/edit.png")
@@ -104,14 +128,51 @@
         background-image: url("../images/diamond.png")
     }
     &.kk-female {
-        background-size: 100%;
+        background-size: 50%;
         background-image: url("../images/woman.png")
     }
     &.kk-male {
-        background-size: 100%;
+        background-size: 50%;
         background-image: url("../images/man.png")
     }
-    
+    &.kk-hourglass {
+        position: relative;
+        top: -1px;
+        width:15px;
+        height: 15px;
+        background-size: 60%;
+        background-image: url("../images/hourglass.png")
+    }
+    &.kk-like-1 {
+        width: 90px;
+        height: 26px;
+        background-size: 100%;
+        background-image: url("../images/like_1.png")
+    }
+    &.kk-like-2 {
+        width: 90px;
+        height: 26px;
+        background-size: 100%;
+        background-image: url("../images/like_2.png")
+    }
+    &.kk-apply-1 {
+        width: 90px;
+        height: 26px;
+        background-size: 100%;
+        background-image: url("../images/apply_1.png")
+    }
+    &.kk-apply-2 {
+        width: 90px;
+        height: 26px;
+        background-size: 100%;
+        background-image: url("../images/apply_2.png")
+    }
+    &.kk-apply-3 {
+        width: 90px;
+        height: 26px;
+        background-size: 100%;
+        background-image: url("../images/apply_3.png")
+    }
 }
 
 .btn-navbar {
