--- a/src/templates/cover.html
+++ b/src/templates/cover.html
@@ -3,7 +3,7 @@
         <p class="text-center">恭喜您</p>
         <p class="text-center">您的任务已经成功发布！</p>
         <p class="text-center">
-            <a class="btn btn-primary">查看推荐人选</a>
+            <a class="btn btn-primary" ng-href="#/recommands" ng-click="closeCover()">查看推荐人选</a>
         </p>
         <div class="cover-close" ng-click="closeCover()"></div>
     </div>
