--- a/src/templates/recommands.html
+++ b/src/templates/recommands.html
@@ -17,16 +17,52 @@
 					<p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
 					<div class="clearfix">
 						<div class="pull-left">
-							<span class="btn btn-default">
-								<i class="fa fa-star-o text-warning"></i>
-								收藏此人
-							</span>
+							<span class="kk kk-like-1"></span>
 						</div>
 						<div class="pull-right">
-							<span class="btn btn-default">
-								<i class="fa fa-star-o text-warning"></i>
-								<i class=""></i>正在申请
-							</span>
+							<span class="kk kk-apply-1"></span>
+						</div>
+					</div>
+				</div>
+				<div class="recommand-avatar">
+					<img ng-src="../images/avatar_1.png" alt="">
+				</div>
+			</div>
+			<div class="recommand">
+				<div class="recommand-header">
+					Angel Mo <i class="kk kk-icon kk-female"></i>
+				</div>
+				<div class="recommand-body">
+					<div>语种：中文(母语)/韩语(流利)</div>
+					<p>所在地：韩国首尔</p>
+					<p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
+					<div class="clearfix">
+						<div class="pull-left">
+							<span class="kk kk-like-2"></span>
+						</div>
+						<div class="pull-right">
+							<span class="kk kk-apply-2"></span>
+						</div>
+					</div>
+				</div>
+				<div class="recommand-avatar">
+					<img ng-src="../images/avatar_1.png" alt="">
+				</div>
+			</div>
+			<div class="recommand">
+				<div class="recommand-header">
+					Angel Mo <i class="kk kk-icon kk-female"></i>
+				</div>
+				<div class="recommand-body">
+					<div>语种：中文(母语)/韩语(流利)</div>
+					<p>所在地：韩国首尔</p>
+					<p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
+					<div class="clearfix">
+						<div class="pull-left">
+							<span class="kk kk-like-1"></span>
+						</div>
+						<div class="pull-right">
+							<span class="kk kk-apply-3"></span>
 						</div>
 					</div>
 				</div>
