--- a/src/templates/applicants.html
+++ b/src/templates/applicants.html
@@ -6,6 +6,70 @@
 </div>
 <div class="scrollable">
 	<div class="scrollable-content">
-		div.recommand
+		<div class="recommands">
+			<div class="recommand">
+				<div class="recommand-header">
+					Angel Mo <i class="kk kk-icon kk-female"></i>
+				</div>
+				<div class="recommand-body">
+					<div>语种：中文(母语)/韩语(流利)</div>
+					<p>所在地：韩国首尔</p>
+					<p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
+					<div class="clearfix">
+						<div class="pull-left">
+							<span class="kk kk-like-1"></span>
+						</div>
+						<div class="pull-right">
+							<span class="kk kk-apply-1"></span>
+						</div>
+					</div>
+				</div>
+				<div class="recommand-avatar">
+					<img ng-src="../images/avatar_1.png" alt="">
+				</div>
+			</div>
+			<div class="recommand">
+				<div class="recommand-header">
+					Angel Mo <i class="kk kk-icon kk-female"></i>
+				</div>
+				<div class="recommand-body">
+					<div>语种：中文(母语)/韩语(流利)</div>
+					<p>所在地：韩国首尔</p>
+					<p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
+					<div class="clearfix">
+						<div class="pull-left">
+							<span class="kk kk-like-2"></span>
+						</div>
+						<div class="pull-right">
+							<span class="kk kk-apply-2"></span>
+						</div>
+					</div>
+				</div>
+				<div class="recommand-avatar">
+					<img ng-src="../images/avatar_1.png" alt="">
+				</div>
+			</div>
+			<div class="recommand">
+				<div class="recommand-header">
+					Angel Mo <i class="kk kk-icon kk-female"></i>
+				</div>
+				<div class="recommand-body">
+					<div>语种：中文(母语)/韩语(流利)</div>
+					<p>所在地：韩国首尔</p>
+					<p>个人简介：Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quibusdam. Sit quas tempora, quia officia, earum eum animi commodi! Expedita porro maiores recusandae in quidem quam rerum quo a exercitationem.</p>
+					<div class="clearfix">
+						<div class="pull-left">
+							<span class="kk kk-like-1"></span>
+						</div>
+						<div class="pull-right">
+							<span class="kk kk-apply-3"></span>
+						</div>
+					</div>
+				</div>
+				<div class="recommand-avatar">
+					<img ng-src="../images/avatar_1.png" alt="">
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
