--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -4,13 +4,31 @@
         <input type="text" class="form-control full-width" placeholder="请输入关键字">
     </span>
 </div>
-<div ui-content-for="navbarAction"></div>
+<div ui-content-for="navbarAction">
+    <div class="btn sidebar-toggle">
+        <i class="fa fa-cog text-large"></i>
+    </div>
+</div>
 <div ui-content-for="backAction">
     <div ui-toggle="uiSidebarLeft" class="btn sidebar-toggle">
         <i class="fa fa-bars"></i>
     </div>
 </div>
 <div class="scrollable">
+	<div class="scrollable-header">
+		<div class="section section-condensed" id="filter">
+            <div class="btn-group justified">
+                <label class="btn">
+                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="language">语言<i class="kk kk-icon" ng-class="{'kk-check':choosen.languages.length == 2}"></i></label>
+                <label class="btn">
+                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="location">地点<i class="kk kk-icon" ng-class="{'kk-check':choosen.city.name != ''}"></i></label>
+                <label class="btn">
+                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="price">价格<i class="kk kk-icon" ng-class="{'kk-check':choosen.price.range != ''}"></i></label>
+                <label class="btn">
+                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="category">类型<i class="kk kk-icon" ng-class="{'kk-check':choosen.category != ''}"></i></label>
+            </div>
+        </div>
+	</div>
 	<div class="scrollable-content">
 		<a ng-href="#/translators/translator_id" class="translator" ng-repeat="translator in translators track by $index">
 			<imageview data-rate="750/422" src="translator.image"></imageview>
