--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -154,6 +154,7 @@
             <a class="list-group-item" href="#/">
                 <i class="kk kk-icon kk-sidebar-6 pull-left"></i>
                 <span class="list-group-item-text">我的消息</span>
+                <span class="badge">14</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
         </div>
