--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -120,7 +120,7 @@
         <div class="avatar avatar-large">
             <img ng-src="../images/avatar_1.png" alt="">
         </div>
-        <div class="text-large">姚逢临<i class="kk kk-icon kk-edit" style="position:relative;top:-3px"></i></div>
+        <a ng-href="#/me_info" class="block text-large text-gray">姚逢临<i class="kk kk-icon kk-edit" style="position:relative;top:-3px"></i></a>
         <div>英文/中文/西班牙语/广东话</div>
         <p></p>
     </div>
@@ -136,26 +136,26 @@
                 <span class="list-group-item-text">任务清单</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
-            <a class="list-group-item" href="#/">
+            <a class="list-group-item" href="#/me">
                 <i class="kk kk-icon kk-sidebar-3 pull-left"></i>
                 <span class="list-group-item-text">成为翻译</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
-            <a class="list-group-item" href="#/">
+            <a class="list-group-item" href="#/favorite">
                 <i class="kk kk-icon kk-sidebar-4 pull-left"></i>
                 <span class="list-group-item-text">我的收藏</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
-            <a class="list-group-item" href="#/">
+            <a class="list-group-item" href="#/wallet">
                 <i class="kk kk-icon kk-sidebar-5 pull-left"></i>
                 <span class="list-group-item-text">我的钱包</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
-            <a class="list-group-item" href="#/">
+            <a class="list-group-item" href="#/messages">
                 <i class="kk kk-icon kk-sidebar-6 pull-left"></i>
                 <span class="list-group-item-text">我的消息</span>
-                <span class="badge">14</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
+                <span class="badge">14</span>
             </a>
         </div>
     </div>
