--- a/src/templates/me.html
+++ b/src/templates/me.html
@@ -75,12 +75,12 @@
                     翻译类型
                 </div>
             </div>
-            <div class="list-group-item clearfix">
+            <div class="list-group-item clearfix" ng-repeat="translate_type in user.translate_types track by $index">
                 <div class="pull-left">
-                    <span class="text-small">旅行</span>美食、景点、购物
+                    <span class="text-small">{{translate_type.name}}</span>---{{skillsToString(translate_type.skills)}}
                 </div>
                 <div class="pull-right">
-                    <span class="btn btn-danger bg-white text-danger section section-condensed">
+                    <span class="btn btn-danger bg-white text-danger section section-condensed" ng-click="removeTranslateType(translate_type)">
                         删除
                     </span>
                 </div>
@@ -122,7 +122,7 @@
                     个人认证
                 </div>
             </div>
-            <div class="list-group-item clearfix">
+            <a ng-href="#/authen_name" class="list-group-item clearfix">
                 <div class="pull-left">
                     实名认证
                 </div>
@@ -130,8 +130,8 @@
                     <span class="list-group-item-text">上传身份证</span>
                     <i class="text-gray-light fa fa-chevron-right pull-right"></i>
                 </div>
-            </div>
-            <div class="list-group-item clearfix">
+            </a>
+            <a ng-href="#/authen_language" class="list-group-item clearfix">
                 <div class="pull-left">
                     语言认证
                 </div>
@@ -139,8 +139,8 @@
                     <span class="list-group-item-text">上传语言考核证书</span>
                     <i class="text-gray-light fa fa-chevron-right pull-right"></i>
                 </div>
-            </div>
-            <div class="list-group-item clearfix">
+            </a>
+            <a ng-href="#/authen_industry" class="list-group-item clearfix">
                 <div class="pull-left">
                     行业资格认证
                 </div>
@@ -148,8 +148,8 @@
                     <span class="list-group-item-text">上传行业相关证明</span>
                     <i class="text-gray-light fa fa-chevron-right pull-right"></i>
                 </div>
-            </div>
-            <div class="list-group-item clearfix">
+            </a>
+            <a ng-href="#/authen_member" class="list-group-item clearfix">
                 <div class="pull-left">
                     高级会员认证
                 </div>
@@ -157,7 +157,7 @@
                     <span class="list-group-item-text">取得会员认证</span>
                     <i class="text-gray-light fa fa-chevron-right pull-right"></i>
                 </div>
-            </div>
+            </a>
         </div>
         <!-- 我的工作日 -->
         <div class="list-group" style="margin:10px">
@@ -182,9 +182,9 @@
                     收费标准
                 </div>
             </div>
-            <div class="list-group-item clearfix">
+            <div class="list-group-item clearfix" ng-click="edit({'salary':user.salary})">
                 <div class="pull-left">
-                    日薪
+                    日薪{{user.salary}}
                 </div>
                 <div class="pull-right">
                     <i class="text-gray-light fa fa-chevron-right pull-right"></i>
@@ -198,11 +198,11 @@
                     翻译经验
                 </div>
             </div>
-            <div class="list-group-item clearfix">
+            <div class="list-group-item clearfix" ng-repeat="translate_experience in user.translate_experiences track by $index">
                 <div class="pull-left">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita ratione tempore deleniti, officiis pariatur nesciunt, veniam quisquam culpa nisi blanditiis. Asperiores vero ducimus ad, voluptatum odit. Dignissimos iste, assumenda aliquid!
+                    {{translate_experience}}
                 </div>
-                <div class="pull-right">
+                <div class="pull-right" ng-click="removeTranslateExperience($index)">
                     <span class="btn btn-danger bg-white text-danger section section-condensed">
                         删除
                     </span>
@@ -219,12 +219,34 @@
                     个人介绍
                 </div>
             </div>
-            <div class="list-group-item clearfix">
+            <div class="list-group-item clearfix" ng-click="edit({'intro':user.intro})">
                 <div class="pull-left">
-                    编辑个人介绍
+                    {{user.intro}}
                 </div>
                 <div class="pull-right">
                     <i class="text-gray-light fa fa-chevron-right pull-right"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div ui-content-for="modals">
+    <div class="modal modal-overlay" ui-if="editable_panel" ui-state='editable_panel'>
+        <!-- <div class="modal-backdrop in"></div> -->
+        <div class="modal-dialog" style="margin:0">
+            <div class="modal-content">
+                <div class="modal-header text-primary clearfix">
+                    <div class="pull-left section section-condensed bg-transparent" ui-turn-off="editable_panel">
+                        <i class="fa fa-chevron-left" style="position:relative;top:3px"></i>
+                    </div>
+                    <h4 class="modal-title text-center">信息编辑</h4>
+                </div>
+                <div class="modal-body">
+                    <textarea class="form-control" placeholder="请填写" ng-model="input.editable_content" required></textarea>
+                </div>
+                <div class="modal-footer">
+                    <button ui-turn-off="editable_panel" class="btn btn-default">取消</button>
+                    <button ui-turn-off="editable_panel" class="btn btn-primary">保存</button>
                 </div>
             </div>
         </div>
