--- a/src/templates/authen_member.html
+++ b/src/templates/authen_member.html
@@ -6,6 +6,36 @@
 </div>
 <div class="scrollable">
 	<div class="scrollable-content">
-		高级会员认证
+		
+		
+        <div flow-init ng-controller="authenUploadController" class="uploader" ng-if="!is_authen">
+            <div class="section"></div>
+            <div class="section text-center">
+                <span class="block full-width flow-btn text-center">
+                    <img src="../images/upload_4.png" ng-show="!$flow.files.length" alt="">
+                    <div ng-repeat="file in $flow.files" class="preview-box">
+                        <span class="close" ng-click="file.cancel()" style="opacity:1">&times;</span>
+		                <img flow-img="file" alt="">
+		            </div>
+            	</span>
+        	</div>
+        <div class="section">
+            <div class="btn-group justified">
+                <span flow-btn flow-attrs="{accept:'image/*'}" class="btn btn-primary needsclick" >添加证书</span>
+                <span class="btn btn-danger" ng-click="ajaxForm($flow)" ng-show="$flow.files.length > 0">提交审核</span>
+            </div>
+        </div>
+        <div class="section text-grey text-center text-small">
+            我们将在1-2个工作日内完成信息审核
+        </div>
+    </div>
+    <div class="section text-center" ng-if="is_authen">
+        <h4 class="text-center"><p>恭喜您，完成实名认证</p>下面是您的实名信息</h4>
+        <div ng-repeat="authen in authens track by $index" class="preview-box">
+            <img ng-src="{{authen}}" alt="" style="margin-bottom:5px;" class="block full-width">
+        </div>
+    </div>
+
+	
 	</div>
 </div>
