--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -161,7 +161,7 @@
     </div>
     <div class="scrollable-footer">
         <div class="section text-right">
-            <a href="/#" class="btn btn-warning">分享我们</a>
+            <a href="#、" class="btn btn-warning">分享我们</a>
         </div>
     </div>
 </div>
